[gd_scene load_steps=4 format=3 uid="uid://bb0ttw3jq55kx"]

[ext_resource type="Script" uid="uid://ddqj62v64c5ri" path="res://UserInterface/PauseMenu/Scripts/pause_menu.gd" id="1_0ft4y"]
[ext_resource type="PackedScene" uid="uid://c36jmwqv2q5lo" path="res://UserInterface/SettingsMenu/Scenes/settings_menu.tscn" id="2_6yu8r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_04n6d"]
bg_color = Color(0.142858, 0.142858, 0.142858, 1)

[node name="PauseMenu" type="CanvasLayer" node_paths=PackedStringArray("focus")]
process_mode = 3
script = ExtResource("1_0ft4y")
focus = NodePath("PanelContainer/HSplitContainer/PanelContainer2/MarginContainer/VSplitContainer/VBoxContainer/Resume")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSplitContainer" type="HSplitContainer" parent="PanelContainer"]
layout_mode = 2
split_offset = -300
dragging_enabled = false

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_04n6d")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HSplitContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VSplitContainer" type="VSplitContainer" parent="PanelContainer/HSplitContainer/PanelContainer2/MarginContainer"]
layout_mode = 2
dragging_enabled = false

[node name="PauseTitle" type="Label" parent="PanelContainer/HSplitContainer/PanelContainer2/MarginContainer/VSplitContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 59
text = "Paused"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HSplitContainer/PanelContainer2/MarginContainer/VSplitContainer"]
layout_mode = 2
theme_override_constants/separation = 9

[node name="Resume" type="Button" parent="PanelContainer/HSplitContainer/PanelContainer2/MarginContainer/VSplitContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Resume"

[node name="Settings" type="Button" parent="PanelContainer/HSplitContainer/PanelContainer2/MarginContainer/VSplitContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Settings"

[node name="MainMenu" type="Button" parent="PanelContainer/HSplitContainer/PanelContainer2/MarginContainer/VSplitContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Main Menu"

[node name="Quit" type="Button" parent="PanelContainer/HSplitContainer/PanelContainer2/MarginContainer/VSplitContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Quit"

[node name="Control" type="Control" parent="PanelContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SettingsMenu" parent="." instance=ExtResource("2_6yu8r")]
visible = false

[connection signal="pressed" from="PanelContainer/HSplitContainer/PanelContainer2/MarginContainer/VSplitContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/HSplitContainer/PanelContainer2/MarginContainer/VSplitContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="PanelContainer/HSplitContainer/PanelContainer2/MarginContainer/VSplitContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="PanelContainer/HSplitContainer/PanelContainer2/MarginContainer/VSplitContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
